--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ ul.nav-list{
 
 .arrow {
   width: 25px;
-  margin-top: 2rem;
+  margin-top: 3rem;
   margin-bottom: 2rem;
   bottom: 20px;
   color: #9bc9d2;
@@ -293,13 +293,10 @@ ul.nav-list{
 .details p{
     text-align: center;
     line-height: 2.5rem;
+    margin: 0rem 4rem;
 }
 
-.details-plane p{
-  text-align: center;
-  line-height: 2.5rem;
-  z-index: 100;
-}
+
 .photo-moi{
     width: 30rem;
     border-radius: 50rem;
@@ -695,7 +692,7 @@ figure.comp-img.hover i {
 .row3{
   display: flex;
   justify-content: center;
-  margin: 2rem;
+  margin: 0rem 2rem 2rem;
 }
 
 @import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
@@ -801,6 +798,8 @@ figure.snip1196.hover:after {
   margin: 2rem;
 }
 
+
+
 .details3{
   margin: 0rem 30rem 2rem 30rem;
 }
@@ -815,7 +814,7 @@ figure.snip1196.hover:after {
 .reseau2 {
   display: flex;
   justify-content: center;
-  margin: 2rem;
+  margin: 2rem 2rem 4rem 2rem;
 }
 
 .reseau2 a i:hover{
@@ -941,7 +940,7 @@ footer p{
 
 @media only screen and (max-width:1024px){
     .photo-moi{
-        width: 35rem;
+        width: 30rem;
     }
     .details{
       margin: 0rem 5rem 2rem 5rem;
@@ -983,6 +982,14 @@ footer p{
     transform: translate(-50%,-50%);
     -webkit-animation: pulse-shadow 1.5s infinite cubic-bezier(0.25, 0.46, 0.45, 0.94);
     animation: pulse-shadow 1.5s infinite cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  }
+
+  .details p{
+    margin: 0rem ;
+  }
+
+  .frame{
+    display: none;
   }
   
   @keyframes pulse {
@@ -1039,9 +1046,28 @@ footer p{
     border-color: transparent white transparent transparent;
   }
 
+  .real{
+    margin: 5rem 5rem 0rem 5rem;
+  }
+  .reseau2{
+    margin: 2rem 2rem 0rem 2rem;
+  }
+
+  .paperplane{
+    display: none;
+  }
+
+  .frame{
+    display: none;
+  }
+
+  .details p{
+    margin: 0rem ;
+  }
+
 @media only screen and (max-width:640px){
   .photo-moi{
-      width: 30rem;
+      width: 20rem;
   }
   .details{
     margin: 0rem 2rem 2rem 2rem;
