--- a/galery.css
+++ b/galery.css
@@ -211,7 +211,7 @@ iframe{
 }
 
 
-#back01, #back02, #back03, #back04, #back05, #back06, #back07, #back08, #back09, #back10{
+#back01, #back02, #back03, #back04, #back05, #back06, #back07, #back08, #back09, #back10, #back11, #back12{
   position: absolute;
   background-color: white;
   border-radius: 20px;
@@ -225,7 +225,7 @@ iframe{
   cursor: pointer;
 }
 
-#forward01, #forward02, #forward03, #forward04, #forward05, #forward06, #forward07, #forward08, #forward09, #forward10{
+#forward01, #forward02, #forward03, #forward04, #forward05, #forward06, #forward07, #forward08, #forward09, #forward10, #forward11, #forward12{
   position: absolute;
   margin: 244px -60px;
   font-size: 2rem;
@@ -405,6 +405,10 @@ span {
 width: 100%;
 }
 
+.imagescarousel {
+  width: 90%;
+}
+
 .port .description{
   width: 100%;
   padding: 0 3rem;
@@ -455,14 +459,14 @@ position: relative;
   width: 100%;
 }
 
-#back01, #back02, #back03, #back04, #back05, #back06, #back07, #back08, #back09, #back10{
+#back01, #back02, #back03, #back04, #back05, #back06, #back07, #back08, #back09, #back10, #back11, #back12{
   margin: 116px 5px;
   border-radius: 20px;
   width: 30px;
   height: 30px;
   font-size: 1.5rem;
 }
-#forward01, #forward02, #forward03, #forward04, #forward05, #forward06, #forward07, #forward08, #forward09, #forward10{
+#forward01, #forward02, #forward03, #forward04, #forward05, #forward06, #forward07, #forward08, #forward09, #forward10, #forward11, #forward12{
   margin: 116px -35px;
   border-radius: 20px;
   width: 30px;
