--- a/style.css
+++ b/style.css
@@ -59,25 +59,25 @@ table {
 }
 body{
     font-size: 1.6rem; /* 16px */
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 h1{
     font-size: 3.8rem; 
-    font-family: 'Raleway', sans-serif;
-    font-weight: 600 ;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500 ;
 }
 
 h2{
   font-size: 2.5rem; 
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 600 ;
 }
 
 h3{
   font-size: 1.8rem;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 500;
+  font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
 }
 
 nav{
@@ -128,11 +128,14 @@ ul.nav-list{
 
 .nav-list li a{
     text-decoration: none;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 1.7rem;
     color: black;
 }
 
+.nav-list li a:hover{
+  border-bottom: #9bc9d2 2px solid; 
+}
 
 
 .burger .bar{
@@ -242,8 +245,8 @@ ul.nav-list{
   padding: 0.5rem 2.1rem 0.4rem 0.4rem;
   font-size: 1.2rem;
   text-transform: none;
-  font-weight: 600;
-  font-family: 'Raleway', sans-serif;
+  font-weight: 500;
+  font-family: 'Montserrat', sans-serif;
   transition-duration: 0.2s;
 }
 
@@ -316,10 +319,7 @@ ul.nav-list{
 
 
 .photo-moi{
-    width: 30rem;
-    border-radius: 50rem;
-    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
-    border: rgb(231, 231, 231) 5px solid;
+    width: 35rem;
 }
 
 .moi{
@@ -381,17 +381,18 @@ ul.nav-list{
   margin: 4rem 2rem;
 }
 
-.details2 p{
-    margin: 2rem 4rem;
-    line-height: 2.5rem;
-    text-align: center;
-}
 
 .img-comp {
     background-color: tomato;
     height: 50rem;
     display: flex;
     z-index: 0;
+}
+
+.details2 p{
+  margin: 2rem 45rem;
+  line-height: 2.5rem;
+  text-align: center;
 }
 
 .comp{
@@ -485,7 +486,7 @@ figure.comp-img p {
 figure.comp-img h3 {
   margin: 0 0 5px;
   line-height: 1.1em;
-  font-weight: 900;
+  font-weight: 500;
   font-size: 1.2em;
   opacity: 0.75;
   text-decoration: underline black;
@@ -682,10 +683,11 @@ figure.comp-img.hover i {
 .content span {
   color: #9bc9d2;
   font-size: 1.1em;
-  font-weight: bold;
+  font-weight: 600;
 }
 .content h2 {
-  font-size: 1.8em;
+  font-size: 1.7em;
+  font-weight: 500;
   padding-top: 5px;
 }
 .content p {
@@ -889,6 +891,12 @@ footer p{
     margin: 0rem 3rem 2rem 3rem;
 }
 
+.details2 p{
+  margin: 2rem 4rem;
+  line-height: 2.5rem;
+  text-align: center;
+}
+
     .nav-list{
         position: fixed;
         top: 0;
@@ -916,6 +924,7 @@ footer p{
     .nav-list li a:hover{
         transform: translateY(-1rem);
         z-index: 99;
+        text-decoration: none;
     }
     .burger{
         display: flex;
@@ -973,6 +982,13 @@ footer p{
     .details{
       margin: 0rem 5rem 2rem 5rem;
   }
+
+  .details2 p{
+    margin: 2rem 10rem;
+    line-height: 2.5rem;
+    text-align: center;
+}
+
   .button {
     display: block;
     position: absolute;
@@ -1013,7 +1029,7 @@ footer p{
   }
 
   .details p{
-    margin: 0rem ;
+    margin: 0rem 10rem;
   }
 
   .frame{
@@ -1043,6 +1059,17 @@ footer p{
   }
 }
 @media screen and (max-width: 767px) {
+
+  .details p{
+    margin: 0rem 0rem;
+  }
+
+  .details2 p{
+    margin: 2rem 4rem;
+    line-height: 2.5rem;
+    text-align: center;
+}
+
   .timeline::after {
     left: 65px;
   }
@@ -1089,11 +1116,14 @@ footer p{
     display: none;
   }
 
-  .details p{
-    margin: 0rem ;
-  }
 
 @media only screen and (max-width:640px){
+
+  .details p{
+    margin: 0rem 3rem;
+  }
+
+
   .photo-moi{
       width: 20rem;
   }
